frontend/src/components/CreateEditAlbum/CreateEditAlbum.module.scss
@import "../Theme/theme.scss";

.albumWrapper {
  display: flex;
  gap: 3rem;
  height: calc(100% - 40px - 2rem);
  .albumSidePanel {
    width: 346px;
    height: calc(100% - 4rem);
    flex-grow: 0;
    flex-shrink: 0;

    display: flex;
    flex-direction: column;
    justify-content: space-between;
    .inputSection {
      display: flex;
      flex-direction: column;
      gap: 0.5rem;
    }
    .buttonSection {
      display: flex;
      flex-direction: column;
      gap: 1rem;
      button {
        display: flex;
        justify-content: center;
      }
    }
  }
  .imageSelection {
    flex-grow: 1;
    height: calc(100% - 4rem);
    background-color: $bg-secondary;
    border-radius: $border-radius;
  }
}

